[project]
name = "causal-dag-marimo-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "marimo>=0.23.6",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pgmpy>=1.1.2",
    "polars>=1.41.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.35",
]
